kubernetes/startpage/startpage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: startpage
  name: startpage
  labels:
    app: startpage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: startpage
  template:
    metadata:
      labels:
        app: startpage
    spec:
      containers:
        - name: startpage
          image: ghcr.io/reidmason/startpage:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: startpage-storage
              mountPath: /app/data
      volumes:
        - name: startpage-storage
          persistentVolumeClaim:
            claimName: startpage-pvc

---
apiVersion: v1
kind: Service
metadata:
  namespace: startpage
  name: startpage
spec:
  selector:
    app: startpage
  ports:
    - protocol: TCP
      name: api
      port: 80
      targetPort: 3000
