kubernetes/startpage/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: startpage
  namespace: startpage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`start.skippythesnake.com`)
      kind: Rule
      services:
        - name: startpage
          port: 80
